[tool.poetry]
name = "tempfiler"
version = "0.1.0"
description = "A django app to store file temporary"
authors = ["Naman Tamrakar <namantam1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.0"
djangorestframework = "^3.12.4"
mysqlclient = "^2.0.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
